Added overlay and JS styles to the info bubble

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ Press Enter to skip to the next section">
             </section>
         </div>
     </div>
+
+    <div id="overlay"></div>
 </div>
 
 <script src="js/index.js"></script>
