--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Tab Index Example</title>
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <script src="bundle.js"></script>
 </head>
 <body>
 
@@ -50,8 +51,6 @@ Press Enter to skip to the next section">
 
     <div id="overlay"></div>
 </div>
-
-<script src="js/index.js"></script>
 
 </body>
 </html>
